Переработана работа с апи для карточки перевозчика
